--- a/Portfolio/Portfolio_Contact.html
+++ b/Portfolio/Portfolio_Contact.html
@@ -35,7 +35,8 @@
         </nav>
         </div>
         <h1>Contact</h1>
-        <h2>Wilt u graag contact met me opnemen? Dat kan, door het onderstaande formulier in te vullen:</h2>
+        <h2>Wilt u graag contact met me opnemen? Dat kan, door het onderstaande formulier in te vullen, <br>
+            of door een e-mail te sturen naar <a href="mailto:Liammeijles@gmail.com?Subject=Contact opnemen" target="_top"><u>Liammeijles@gmail.com</u></a>.</h2>
         <form>
             <table>
                 <tr>
